--- a/BlogApi/BlogApi/ZeroBlog.Api.csproj
+++ b/BlogApi/BlogApi/ZeroBlog.Api.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\ZeroBlog.Infrastructure\ZeroBlog.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\ProfilePic\" />
+  </ItemGroup>
+
 </Project>
